<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Gastos">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="39dp" />

        <EditText
            android:id="@+id/ETGasto"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/Gasto"
            android:inputType="numberDecimal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="45dp" />

        <EditText
            android:id="@+id/ETFecha2"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:ems="10"
            android:hint="@string/fecha"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="42dp" />

        <EditText
            android:id="@+id/ETMonto2"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:ems="10"
            android:hint="@string/monto"
            android:inputType="numberDecimal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="47dp" />

        <EditText
            android:id="@+id/ETLugar"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:ems="10"
            android:hint="@string/lugar"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="38dp" />

        <Spinner
            android:id="@+id/SPMes2"
            android:layout_width="match_parent"
            android:layout_height="52dp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="44dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:onClick="enviar2"
            android:text="@string/registrar"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:onClick="salir"
            android:text="@string/regresar"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>