<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="185dp"
            app:srcCompat="@mipmap/logo" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <EditText
            android:id="@+id/ETNombre"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="31dp" />

        <EditText
            android:id="@+id/ETContra"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:ems="10"
            android:hint="@string/contra"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <CheckBox
            android:id="@+id/CBGuardar"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/save"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:onClick="ingresarMenu"
            android:text="@string/log"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:onClick="salirMenu"
            android:text="@string/exit"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>